--- a/CoreData/03/Starter/PetPal/PetPal/Resources/Base.lproj/Main.storyboard
+++ b/CoreData/03/Starter/PetPal/PetPal/Resources/Base.lproj/Main.storyboard
@@ -221,6 +221,18 @@
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lPa-ih-ObH">
+                                                    <rect key="frame" x="120" y="220" width="30" height="30"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="30" id="9Hk-tJ-QJj"/>
+                                                        <constraint firstAttribute="height" constant="30" id="jxe-ZV-jC2"/>
+                                                    </constraints>
+                                                    <color key="tintColor" red="1" green="0.14913141730000001" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    <state key="normal" title="X"/>
+                                                    <connections>
+                                                        <action selector="onDeleteBtnTapped:" destination="e3N-a2-lAM" eventType="touchUpInside" id="fTh-A5-hYu"/>
+                                                    </connections>
+                                                </button>
                                             </subviews>
                                         </view>
                                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
@@ -230,6 +242,8 @@
                                             <constraint firstAttribute="leadingMargin" secondItem="C4h-fW-Ms1" secondAttribute="leading" id="Ezw-Tc-e9h"/>
                                             <constraint firstAttribute="trailingMargin" secondItem="Hn6-Dm-UqW" secondAttribute="trailing" id="Fdg-3X-SI9"/>
                                             <constraint firstItem="Hn6-Dm-UqW" firstAttribute="top" secondItem="5Dx-wh-UCF" secondAttribute="bottom" constant="8" id="GYD-8a-wj0"/>
+                                            <constraint firstAttribute="trailing" secondItem="lPa-ih-ObH" secondAttribute="trailing" id="KVx-ET-f0E"/>
+                                            <constraint firstAttribute="bottom" secondItem="lPa-ih-ObH" secondAttribute="bottom" id="LpQ-yI-YkO"/>
                                             <constraint firstAttribute="bottom" secondItem="C4h-fW-Ms1" secondAttribute="bottom" constant="8" id="TSy-vn-nds"/>
                                             <constraint firstItem="HXf-DS-gAa" firstAttribute="leading" secondItem="e3N-a2-lAM" secondAttribute="leadingMargin" id="TTA-7E-ekx"/>
                                             <constraint firstItem="C4h-fW-Ms1" firstAttribute="top" secondItem="HXf-DS-gAa" secondAttribute="bottom" constant="8" id="Z9J-Lr-2KJ"/>
